--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@prisma/client": "^5.8.1",
-    "@sendgrid/mail": "^8.1.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -54,16 +54,13 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.8.1",
-    "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "webpack": "^5.89.0",
-    "webpack-node-externals": "^3.0.0"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
