--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.7",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
+    "@nestjs/websockets": "^10.3.7",
     "@prisma/client": "^5.8.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
