--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch --port 5984",
+    "start:zrok": "zrok share reserved uajgu6utdks5",
+    "start:both": "concurrently \"npm:start:dev\" \"npm:start:zrok\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -35,6 +37,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "concurrently": "^8.2.2",
     "firebase-admin": "^12.0.0",
     "nodemailer": "^6.9.8",
     "pug": "^3.0.2",
