Refactor providers in AppModule, update playlist functionality, and fix bugs in PlaylistsController and PlaylistsService

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "musicverse-backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Sugam Subedi",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
